new fonts style and font size

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
       Vel est eligendi neque nulla laudantium repellendus, ab optio excepturi
       exercitationem.
     </p>
+    <h1>Font 4</h1>
+    <p class="four">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit temporibus
+      fuga adipisci quis, sequi provident natus doloribus incidunt porro sed?
+      Eum ducimus esse exercitationem quia, unde perspiciatis rerum aut modi.
+    </p>
   </body>
 </html>
